# ws_002

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
dags/: etl.py
data/audio_files/: Get_Lucky.webm
data/raw/: reccobeats_features.json
docs/: conf.py  index.rst  mkdocs.yml  src.rst
docs/docs/: index.md
notebooks/: 1.0-nlg-load-grammys-to-db.ipynb  1.0-nlg-load-grammys-to-db.ipynb.ipynb  2.0-nlg-eda-spotify.ipynb  2.0-nlg-eda-spotify.py  3.0-nlg-eda-grammys.ipynb  3.0-nlg-eda-grammys.py  4.0-nlg-eda-api.ipynb  4.0-nlg-extraction-api.ipynb  4.0-nlg-extraction-api.py  5.0-nlg-eda-api.ipynb  5.0-nlg-eda-api.py  6.0-nlg-merge.ipynb  6.0-nlg-merge.py
src/: client.py  logging_config.py  params.py  pipeline.py
src/etl/: extraction.py  extraction_api.py  extraction_grammy_spotify.py  load.py  merge.py  transform_grammy.py  transform_grammys.py  transform_spotify.py
